--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  width: 100%;
+  align-self: start;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
